--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,17 +26,23 @@
 
 /*general*/
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .titles{
     font-family: "IBM Plex Mono";
 }  
 
 body{
     font-family: "Open Sans";
-    background-color:#ced4da;
 }
 .special{
     color: #212529;
     background-color:#ced4da;
+    border-radius: 5px;
+    padding: 4px;
 }
 
 .bgmenu{
@@ -71,6 +77,7 @@ a{
     font-weight: 600;
 }
 
+
 .art_home{
     display: flex;
     align-items: center;
@@ -78,49 +85,262 @@ a{
     width: 80%;
 }
 
-
-
-/* ---- particles.js container ---- */
-#particles-js {
-    background-color:#212529;
-    background-size: cover;
-}
-/* ---- stats.js ---- */
-.count-particles {
-    position: absolute;
-    top: 300px;
+ 
+#main_login{
+    margin: 0;
+    padding: 0;
     width: 100%;
-    font-size: .8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-}
-.js-count-particles {
-    font-size: 1.1em;
-}
-#stats,
-.count-particles {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-}
-#stats {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-}
-.count-particles {
-    border-radius: 0 10px 3px 3px;
-}
-.custom-gradient-text {
-    background: linear-gradient(to right, #0dcaf0, #fff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-/*--header--*/
-  #catnas{
-    width: 65%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../media/img_signin.jpg);
+    background-size: cover;
+    background-position: center;  
 }
 
+.login{
+    text-align: center;
+    width: 350px;
+    background-color:rgba(255, 255, 255, 0.7);
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    padding: 10px 0px;
+}
+
+.Form input, .Form textarea {
+    border-radius: 5px;
+    border: solid 1px rgba(0, 0, 0, 0.5);
+    font-size: 1.2rem;
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    margin-top:  15px;
+    padding-left: 10px;
+    width: 90%;
+}
+
+.Form input{
+    height: 30px; 
+    margin-top: 20px;
+}
+
+.buttom{
+    background-color: #0dcaf0;
+    color: #212529; 
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: 25%;
+}
+
+#logo_back{
+    color: #0dcaf0;
+    position: absolute;
+    top: 20px;
+    left: 30px;
+}
+
+#main_404{
+    margin: 40px 0 0 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../media/404.jpg);
+    background-size: cover;
+    background-position: center;  
+}
+
+
+.body{
+    height: 100vh;
+    display: grid;
+    grid-template-columns:1fr;
+    grid-template-rows: 60px 1fr;
+    background-color: #f8f9fa;
+}
+
+.header{
+    background-color: white;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    border-bottom: solid #212529;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+ .header i{
+    color: #212529;
+    font-size: larger;
+ }
+
+.header p{
+    text-align: center;
+    padding-top: 15px;
+    font-size: 1.5rem;
+}
+
+.header span{
+    background-color:#212529;
+    color:  #9eeaf9;
+    padding: 3px;
+    border-radius: 5px;
+}
+
+.aside.open{
+    left: 0;
+}
+
+.aside{
+    background-color: #212529;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    height: calc(100vh - 60px);
+    position: absolute;
+    top: 60px;
+    left: -300px;
+    transition: left 0.3s;
+}
+
+.aside a{
+    color: #f8f9fa;
+    font-size: 1.2rem;
+    padding-left: 10px;
+    text-decoration: none;
+    padding-top: 10px;
+}
+
+.aside a:hover{
+    color: #9eeaf9;
+}
+
+.aside span{
+    padding-left: 25px;
+}
+
+.main{
+    grid-column: 1/3;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 20px;
+    padding: 25px;
+}
+
+.card{
+    background-color:white;
+    border-radius: 10px;
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    height: fit-content;
+    padding: 20px 0px;
+    border: solid 1px #0dcaf0;
+    color: #212529;
+    text-align: center;
+}
+
+.card #back_text img, .card img{
+    width: 300px;
+    padding: 10px 0px;
+
+}
+
+.card #back_text{
+    margin: 10px 20px;
+    color: #6c757d;
+    font-size: 1.2rem;
+}
+
+.card h2{
+    text-align: center;
+    color: #212529;
+    padding-bottom: 20px;
+}
+
+.card p{
+    padding: 10px 10px;
+    text-align: justify;
+    color: #6c757d;
+}
+
+.card .Form{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.post_inv{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    border-bottom: solid 1px #0dcaf0;
+}
+
+#user_back{
+    text-align: center;
+    color:#ced4da;
+    font-size: 1.2rem;
+    padding: 20px 0px;
+    border-bottom: dotted 1px #ced4da;
+}
+
+#user_back i{
+    color:#0dcaf0;
+    font-size: 3rem;
+    padding-bottom: 10px;
+}
+
+.card_text, .card_form{
+    padding: 20px;
+    color: #212529;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.logout_back{
+    position: absolute;
+    bottom: 0;
+    list-style: none;
+    margin-bottom: 30px;
+    border-top: dotted 1px #ced4da;
+    padding-top: 20px;
+    width: 70%;
+}
+
+.menu_back{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+}
+
+@media(min-width: 992px){
+    .card .Form{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .body{
+        grid-template-columns: 300px 1fr;
+    }
+
+    .main{
+        grid-column: 2/3;
+    }
+
+    .aside{
+        left: 0;
+    }
+
+    .header{
+        justify-content: center;
+    }
+
+    .header p:nth-child(1){
+        visibility: hidden;
+    }
+}
